# Timesweeper

./: .clang-format  .clang-tidy  .gitignore  README.md
.github/workflows/: analysis.yml  build-cmake.yml  codeql.yml
timesweeper/: CMakeLists.txt  resources.qrc  timesweeper.pro
timesweeper/Forms/: Game.ui  Help.ui  Menu.ui  Options.ui  TimesweeperMainWindow.ui
timesweeper/Headers/: Building.h  Character.h  DialogueBox.h  DialogueHandler.h  DialogueTriggerBox.h  EnemyBoss.h  EnemyCharacter.h  EnemyHealthBar.h  Game.h  GunArm.h  HealthBar.h  Help.h  Level.h  Menu.h  NPCharacter.h  Options.h  Pickup.h  PlayerCharacter.h  Portal.h  Projectile.h  Tile.h  TimesweeperMainWindow.h
timesweeper/Resources/: level.txt  level1.txt  level2.txt  level3.txt  level4.txt
timesweeper/Resources/Levels/: level1.txt  level1_dialogue.txt  level2.txt  level2_dialogue.txt  level3.txt  level3_dialogue.txt  level4.txt  level4_dialogue.txt  level5.txt  level5_dialogue.txt
timesweeper/Source/: Building.cpp  Character.cpp  DialogueBox.cpp  DialogueHandler.cpp  DialogueTriggerBox.cpp  EnemyBoss.cpp  EnemyCharacter.cpp  EnemyHealthBar.cpp  Game.cpp  GunArm.cpp  HealthBar.cpp  Help.cpp  Level.cpp  Menu.cpp  NPCharacter.cpp  Options.cpp  Pickup.cpp  PlayerCharacter.cpp  Portal.cpp  Projectile.cpp  Tile.cpp  TimesweeperMainWindow.cpp  main.cpp
